<resources>
    <string name="app_name">MultiCoder</string>
    <string name="Welcome">Bienvenido</string>
    <string name="Username">Nombre de usuario</string>
    <string name="Password">Contraseña</string>
    <string name="LogIn">Iniciar sesión</string>
    <string name="Forgot_password">¿Olvidó su contraseña?</string>
    <string name="New_account">¿No tienes una cuenta? \t\t\t\t\t Registrarse</string>
    <string name="Email">Correo</string>
    <string name="Ready">Listo</string>
    <string name="Login_error">Usuario o contraseña incorrecta</string>
    <string name="Email_error">Correo inexistente</string>
    <string name="User_found">\t\t\t\t\t Usuario encontrado</string>
    <string name="Instructions_email">Por favor escribe tu dirección de correo electrónico y haz click en el botón de \'Listo\'. Te enviaremos un enlace con el cual podrás cambiarla.</string>
    <string name="Forgot_password2">¿Olvidaste tu contraseña?</string>
    <string name="Password_change">Cambio de contraseña</string>
    <string name="Instructions_password">Escribe tu nueva contraseña y presiona en \'Listo\' para continuar.</string>
    <string name="New_password">Contraseña nueva</string>
    <string name="User_not_found">\t\t\t\t\t Usuario no encontrado</string>
    <string name="Wrong_password">\t\t\t\t\t Respuesta inválida</string>
    <string name="Register">Regístrate</string>
    <string name="Register2">REgistrarse</string>
    <string name="Name">Nombre</string>
    <string name="Name_not_valid">* Nombre inválido</string>
    <string name="Username_not_valid">* Este usuario ya existe</string>
    <string name="Email_not_valid">* Correo electrónico inválido</string>
    <string name="Password_not_valid">* Contraseña inválida</string>
    <string name="Lets_begin">¡Comencemos!</string>
    <string name="Welcome_text">MultiCoder es una plataforma donde empezarás a desarrollarte como programador. \n\n ¡Échale un vistazo a los cursos y comienza tu aprendizaje!</string>
    <string name="Your_courses">Tus Cursos</string>
    <string name="Go_to_course">Ir al curso</string>
    <string name="Programing_languages">Lenguajes de programación</string>
    <string name="CSharp">C# - C-Sharp</string>
    <string name="CSharp_text">Es un lenguaje de programación multiparadigma desarrollado y estandarizado por la empresa Microsoft como parte de su plataforma .NET</string>
    <string name="JS">JavaScript - JS</string>
    <string name="JS_text">Es un lenguaje de programación interpretado, dialecto del estándar ECMAScript.</string>
    <string name="Python">Python</string>
    <string name="Python_text">Es un lenguaje de alto nivel de programación interpretado cuya filosofía hace hincapié en la legibilidad de su código, se utiliza para desarrollar aplicaciones de todo tipo.</string>
    <string name="Units">Unidades</string>
    <string name="go_to_unit">Ir a la unidad</string>
    <string name="Achievements">Logros</string>
    <string name="Achievement">¡Sigue aprendiendo y gana tu primera insignia!</string>
    <string name="Account">CUENTA</string>
    <string name="App_access">Acceso a la app</string>
    <string name="Access_type">Tiene acceso ilimitado</string>
    <string name="Thanks">Agradecimientos</string>
    <string name="Free">Gratis</string>
    <string name="About">Acerca de</string>
    <string name="Authors">Autores</string>
    <string name="Edit">Editar</string>
</resources>