<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <ImageView
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_message_text_view"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_gap"
            android:gravity="center"
            android:text="@string/Register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/input_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_gap"
            android:layout_marginTop="@dimen/big_gap"
            android:layout_marginEnd="@dimen/big_gap"
            app:cardCornerRadius="@dimen/big_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_message_text_view">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginEnd="@dimen/big_gap"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_gap"
                    android:layout_marginStart="@dimen/big_gap"
                    android:layout_marginEnd="@dimen/big_gap"
                    android:hint="@string/Name"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="nombre" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/error_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/big_gap"
                    android:layout_gravity="start"
                    android:text="@string/Name_not_valid"
                    android:textColor="@color/red_600"
                    android:visibility="visible" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_gap"
                    android:layout_marginStart="@dimen/big_gap"
                    android:layout_marginEnd="@dimen/big_gap"
                    android:hint="@string/Username"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="nombre de usuario" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/error_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/big_gap"
                    android:layout_gravity="start"
                    android:text="@string/Username_not_valid"
                    android:textColor="@color/red_600"
                    android:visibility="visible" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_gap"
                    android:layout_marginStart="@dimen/big_gap"
                    android:layout_marginEnd="@dimen/big_gap"
                    android:hint="@string/Email"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="correo electronico" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/error_email_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/big_gap"
                    android:layout_gravity="start"
                    android:text="@string/Email_not_valid"
                    android:textColor="@color/red_600"
                    android:visibility="visible" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_gap"
                    android:layout_marginStart="@dimen/big_gap"
                    android:layout_marginEnd="@dimen/big_gap"
                    android:hint="@string/Password"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        tools:text="contraseña" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/error_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/big_gap"
                    android:layout_gravity="start"
                    android:text="@string/Password_not_valid"
                    android:layout_marginBottom="@dimen/big_gap"
                    android:textColor="@color/red_600"
                    android:visibility="visible" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_gap"
            android:layout_marginTop="@dimen/big_gap"
            android:layout_marginEnd="@dimen/big_gap"
            android:backgroundTint="@color/button_color"
            android:text="@string/Register2"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_card_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

