<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ultra_light_blue">

        <TextView
            android:id="@+id/account_text_view"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_gap"
            android:text="@string/Account"
            android:textColor="@color/background_color2"
            android:padding="@dimen/default_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/default_gap"
            app:layout_constraintTop_toBottomOf="@+id/account_text_view">

            <TextView
                android:id="@+id/app_access_text_view"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/App_access"
                android:textColor="@color/background_color2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/default_gap"
                android:paddingBottom="@dimen/default_gap">

                <TextView
                    android:id="@+id/access_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/Access_type"
                    android:textColor="@color/background_color2" />

                <TextView
                    android:id="@+id/access_type_text_view"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="end"
                    android:text="@string/Free"
                    android:textColor="@color/button_color" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/about_text_view"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_gap"
            android:padding="@dimen/default_gap"
            android:text="@string/About"
            android:textColor="@color/background_color2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/default_gap"
            app:layout_constraintTop_toBottomOf="@+id/about_text_view">

            <TextView
                android:id="@+id/version_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="69.420.x.x.x"
                android:textColor="@color/background_color2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/thanks_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/Thanks"
                    android:textColor="@color/background_color2" />

                <TextView
                    android:id="@+id/arrow1_text_view"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="end"
                    android:text=">"
                    android:textColor="@color/button_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/authors_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/Authors"
                    android:textColor="@color/background_color2" />

                <TextView
                    android:id="@+id/arrow2_text_view"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="end"
                    android:text=">"
                    android:textColor="@color/button_color" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
